--- a/src/output.css
+++ b/src/output.css
@@ -306,9 +306,6 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
-  .mt-3 {
-    margin-top: calc(var(--spacing) * 3);
-  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -338,9 +335,6 @@
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
-  }
-  .ml-3 {
-    margin-left: calc(var(--spacing) * 3);
   }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
@@ -1016,6 +1010,7 @@ input:checked + .slider:before {
 }
 .surge-gradient {
   background-image: url("../img/surge.png");
+  background-size: cover;
 }
 .foil-in-list {
   width: 240px;
